# idealism

./: Idealism.ipynb  pyproject.toml
