[tool.poetry]
name = "idealism"
version = "0.1.0"
description = ""
authors = ["Mihai-Drosi Caju <cajum.bugs@yandex.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = ""
ipympl = ""

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
